Fixed small linting issues